--- a/pages/tabBar/me/me.wxss
+++ b/pages/tabBar/me/me.wxss
@@ -118,3 +118,12 @@
 .btns button::after {
   border: none;
 }
+
+.signout .signout-btn {
+  text-align: center;
+  line-height: 88rpx;
+  color: #fff;
+  background-color: #f90;
+  margin: 88rpx 44rpx;
+  border-radius: 10rpx;
+}
