--- a/pages/index/pages/onekey/onekey.wxss
+++ b/pages/index/pages/onekey/onekey.wxss
@@ -22,6 +22,11 @@ radio .wx-radio-input, radio .wx-radio-input.wx-radio-input-checked::before {
   border-top: 1rpx solid rgba(0, 0, 0, 0);
 }
 
+.img-tit {
+  color: #c6c6c6;
+  margin: 0 16px;
+}
+
 .make-view textarea {
   width: 88%;
   padding: 20rpx;
