--- a/pages/order/pages/orderInfo/orderInfo.wxss
+++ b/pages/order/pages/orderInfo/orderInfo.wxss
@@ -66,6 +66,21 @@
   white-space: nowrap;
 }
 
+.add-img-n {
+  padding: 0 32rpx;
+  background: #fff;
+}
+
+.add-img-n > view {
+  line-height: 66rpx;
+}
+
+.add-img-n image {
+  display: block;
+  margin: 0 auto;
+  padding: 20rpx 0;
+}
+
 .some-address > view:active {
   background-color: #f5f5f5;
 }
@@ -88,10 +103,14 @@
   vertical-align: middle;
 }
 
+.btns {
+  border-bottom: 1px solid #f5f5f5;
+}
+
 .btns button {
   color: #fff;
   font-size: 32rpx;
-  margin: 0rpx 32rpx;
+  margin: 32rpx;
 }
 
 .btns .go-map {
@@ -108,7 +127,7 @@
   line-height: 32rpx;
   padding: 32rpx;
   background: #fff;
-  margin-top: 62rpx;
+  margin-top: 10rpx;
   margin-bottom: 8rpx;
 }
 
@@ -145,9 +164,11 @@
 .grade {
   color: #fff;
   line-height: 80rpx;
-  margin: 62rpx 32rpx;
+  margin: 40rpx 32rpx 70rpx;
   background-color: #f90;
 }
+
 .over-order .no {
   margin-bottom: 60rpx;
+  background-color: #6c3;
 }
