--- a/pages/tabBar/me/me.wxss
+++ b/pages/tabBar/me/me.wxss
@@ -127,3 +127,39 @@
   margin: 88rpx 44rpx;
   border-radius: 10rpx;
 }
+
+.telModal .tel {
+  width: 396rpx;
+  height: 52rpx;
+  margin: 20rpx auto;
+  border: 1rpx solid #dedede;
+}
+
+.sms-view {
+  width: 396rpx;
+  margin: 20rpx auto;
+  text-align: center;
+}
+
+.smsCode {
+  width: 196rpx;
+  height: 52rpx;
+  border: 1rpx solid #dedede;
+}
+
+.sms-view button {
+  width: 152rpx;
+  color: #fff;
+  font-size: 28rpx;
+  line-height: 54rpx;
+  text-align: center;
+  padding: 0 4rpx;
+  background-color: #f90;
+}
+
+.telModal .btns {
+  width: 100%;
+  height: 80rpx;
+  margin-top: 10rpx;
+  border-top: 1rpx solid #f8f8f8;
+}
