--- a/pages/tabBar/order/order.wxml
+++ b/pages/tabBar/order/order.wxml
@@ -28,7 +28,7 @@
     <view class="{{ search.length? 'hide': '' }}">
       <view class="tab-item {{current == 10? 'active': ''}}" data-index="10" bindtap='navSwitch'>待配送</view>
       <view class="tab-item {{current == 20? 'active': ''}}" data-index="20" bindtap='navSwitch'>进行中</view>
-      <view class="tab-item {{current == 20212223? 'active': ''}}" data-index="20212223" bindtap='navSwitch'>待付款</view>
+      <view class="tab-item {{current == 212223? 'active': ''}}" data-index="212223" bindtap='navSwitch'>待付款</view>
       <view class="tab-item {{current == 3040? 'active': ''}}" data-index="3040" bindtap='navSwitch'>已完成</view>
     </view>
   </view>
@@ -36,7 +36,7 @@
     <view wx:if='{{ dataLen != 0 }}' wx:for="{{ data }}" wx:key="{{ item.ID }}" class='item bb' data-current='{{ current }}' data-id='{{ item.ID }}' bindtap='bindGoOrderInfo'>
       <view class='car-menoy-view clearfix'>
         <view class='fl'>{{ item.Name }}</view>
-        <view class='fr'>￥{{item.Price}}</view>
+        <view class='fr'>￥{{item.Money || item.Price}}</view>
       </view>
       <view class='this_address'>
         <view class='setAddress'>
